--- a/src/scenes/view/ViewTrainer.fxml
+++ b/src/scenes/view/ViewTrainer.fxml
@@ -9,40 +9,40 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="viewTrainerAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ViewTrainer.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ViewTrainerController">
-   <children>
-      <Pane fx:id="pane3" layoutX="53.0" layoutY="30.0" prefHeight="359.0" prefWidth="268.0">
-         <children>
-            <Label fx:id="labelRegisteredTrainers" layoutX="14.0" layoutY="14.0" text="Registered trainers" />
-            <ListView fx:id="listView" layoutX="21.0" layoutY="53.0" onMouseClicked="#selectTrainer" prefHeight="253.0" prefWidth="226.0" />
-            <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="95.0" layoutY="314.0" mnemonicParsing="false" onAction="#selectTrainer" text="Select" />
-         </children>
-      </Pane>
-      <Pane fx:id="pane1" layoutX="450.0" layoutY="14.0" prefHeight="499.0" prefWidth="300.0">
-         <children>
-            <TextField fx:id="txtName" alignment="CENTER" layoutX="76.0" layoutY="22.0" />
-            <ImageView fx:id="imgView" fitHeight="200.0" fitWidth="200.0" layoutX="50.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/pokeLogo.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="labelWon" layoutX="54.0" layoutY="298.0" text="Won:" />
-            <TextField fx:id="txtWins" layoutX="120.0" layoutY="305.0" prefHeight="25.0" prefWidth="100.0" />
-            <Label fx:id="labelLost" layoutX="56.0" layoutY="358.0" text="Lost:" />
-            <TextField fx:id="txtLosses" layoutX="120.0" layoutY="365.0" prefHeight="25.0" prefWidth="100.0" />
-            <Label fx:id="labelCurrency" layoutX="57.0" layoutY="416.0" text="Currency: " />
-            <TextField fx:id="txtCurrency" layoutX="174.0" layoutY="423.0" prefHeight="25.0" prefWidth="100.0" />
-            <Button layoutX="123.0" layoutY="461.0" mnemonicParsing="false" onAction="#updateTrainer" text="Update" />
-         </children>
-      </Pane>
-      <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="1061.0" layoutY="714.0" mnemonicParsing="false" onAction="#backToProfessorMenu" text="Back" />
-      <Pane fx:id="pane2" layoutX="865.0" layoutY="14.0" prefHeight="644.0" prefWidth="268.0">
-         <children>
-            <Label fx:id="labelCollection" layoutX="21.0" layoutY="14.0" text="Collection" />
-            <ListView fx:id="listCollection" layoutX="21.0" layoutY="61.0" prefHeight="253.0" prefWidth="226.0" />
-            <Label fx:id="labelTeam" layoutX="21.0" layoutY="336.0" text="Team" />
-            <ListView fx:id="listTeam" layoutX="21.0" layoutY="378.0" prefHeight="253.0" prefWidth="226.0" />
-         </children>
-      </Pane>
-   </children>
+<AnchorPane fx:id="viewTrainerAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ViewTrainer.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ViewTrainerController">
+    <children>
+        <Pane fx:id="pane3" layoutX="53.0" layoutY="30.0" prefHeight="359.0" prefWidth="268.0">
+            <children>
+                <Label fx:id="labelRegisteredTrainers" layoutX="14.0" layoutY="14.0" text="Registered trainers" />
+                <ListView fx:id="listView" layoutX="21.0" layoutY="53.0" onMouseClicked="#selectTrainer" prefHeight="253.0" prefWidth="226.0" />
+                <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="95.0" layoutY="314.0" mnemonicParsing="false" onAction="#selectTrainer" text="Select" />
+            </children>
+        </Pane>
+        <Pane fx:id="pane1" layoutX="450.0" layoutY="14.0" prefHeight="518.0" prefWidth="300.0">
+            <children>
+                <TextField fx:id="txtName" alignment="CENTER" blendMode="MULTIPLY" layoutX="30.0" layoutY="14.0" />
+                <ImageView fx:id="imgView" fitHeight="200.0" fitWidth="200.0" layoutX="50.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@images/pokeLogo.png" />
+                    </image>
+                </ImageView>
+                <Label fx:id="labelWon" layoutX="54.0" layoutY="298.0" text="Won:" />
+                <TextField fx:id="txtWins" blendMode="MULTIPLY" layoutX="128.0" layoutY="302.0" prefHeight="25.0" prefWidth="100.0" />
+                <Label fx:id="labelLost" layoutX="56.0" layoutY="358.0" text="Lost:" />
+                <TextField fx:id="txtLosses" blendMode="MULTIPLY" layoutX="128.0" layoutY="362.0" prefHeight="25.0" prefWidth="100.0" />
+                <Label fx:id="labelCurrency" layoutX="57.0" layoutY="416.0" text="Currency: " />
+                <TextField fx:id="txtCurrency" blendMode="MULTIPLY" layoutX="178.0" layoutY="420.0" prefHeight="25.0" prefWidth="100.0" />
+                <Button fx:id="btnUpdate" blendMode="MULTIPLY" layoutX="105.0" layoutY="465.0" mnemonicParsing="false" onAction="#updateTrainer" text="Update" />
+            </children>
+        </Pane>
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="1061.0" layoutY="714.0" mnemonicParsing="false" onAction="#backToProfessorMenu" text="Back" />
+        <Pane fx:id="pane2" layoutX="865.0" layoutY="14.0" prefHeight="644.0" prefWidth="268.0">
+            <children>
+                <Label fx:id="labelCollection" layoutX="21.0" layoutY="14.0" text="Collection" />
+                <ListView fx:id="listCollection" layoutX="21.0" layoutY="61.0" prefHeight="253.0" prefWidth="226.0" />
+                <Label fx:id="labelTeam" layoutX="21.0" layoutY="336.0" text="Team" />
+                <ListView fx:id="listTeam" layoutX="21.0" layoutY="378.0" prefHeight="253.0" prefWidth="226.0" />
+            </children>
+        </Pane>
+    </children>
 </AnchorPane>
