--- a/src/scenes/view/ViewTrainer.fxml
+++ b/src/scenes/view/ViewTrainer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="viewTrainerAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ViewTrainer.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ViewTrainerController">
+<AnchorPane fx:id="viewTrainerAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ViewTrainer.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ViewTrainerController">
     <children>
         <Pane fx:id="pane3" layoutX="53.0" layoutY="30.0" prefHeight="359.0" prefWidth="268.0">
             <children>
@@ -17,7 +18,7 @@
                 <ListView fx:id="listView" layoutX="21.0" layoutY="53.0" onMouseClicked="#selectTrainer" prefHeight="290.0" prefWidth="226.0" />
             </children>
         </Pane>
-        <Pane fx:id="pane1" layoutX="450.0" layoutY="14.0" prefHeight="518.0" prefWidth="300.0">
+        <Pane fx:id="pane1" layoutX="450.0" layoutY="14.0" prefHeight="539.0" prefWidth="300.0">
             <children>
                 <TextField fx:id="txtName" alignment="CENTER" blendMode="MULTIPLY" layoutX="30.0" layoutY="14.0" />
                 <ImageView fx:id="imgView" fitHeight="200.0" fitWidth="200.0" layoutX="50.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
@@ -31,7 +32,9 @@
                 <TextField fx:id="txtLosses" blendMode="MULTIPLY" layoutX="128.0" layoutY="362.0" prefHeight="25.0" prefWidth="100.0" />
                 <Label fx:id="labelCurrency" layoutX="57.0" layoutY="416.0" text="Currency: " />
                 <TextField fx:id="txtCurrency" blendMode="MULTIPLY" layoutX="178.0" layoutY="420.0" prefHeight="25.0" prefWidth="100.0" />
-                <Button fx:id="btnUpdate" blendMode="MULTIPLY" layoutX="105.0" layoutY="465.0" mnemonicParsing="false" onAction="#updateTrainer" text="Update" />
+                <Button fx:id="btnUpdate" blendMode="MULTIPLY" layoutX="50.0" layoutY="465.0" mnemonicParsing="false" onAction="#updateTrainer" text="Update" />
+            <CheckBox fx:id="chkBxAllowRemoval" layoutX="100.0" layoutY="514.0" mnemonicParsing="false" text="Allow Removal" />
+            <Button fx:id="btnRemove" blendMode="MULTIPLY" layoutX="150.0" layoutY="465.0" mnemonicParsing="false" onAction="#removeTrainer" prefHeight="39.0" prefWidth="91.0" text="Remove" />
             </children>
         </Pane>
         <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="1061.0" layoutY="714.0" mnemonicParsing="false" onAction="#backToProfessorMenu" text="Back" />
